# src/controllers/budgetItem.js
@@ -1,17 +1,65 @@
+const BudgetItem = require("../models/budgetItem");
+
 async function getAll(req, res) {
-  return res.sendStatus(200);
+  try {
+    const result = await BudgetItem.find().populate("category");
+    return res.status(200).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
+
 async function getOne(req, res) {
-  return res.sendStatus(200);
+  try {
+    const result = await BudgetItem.findById(req.params.id).populate(
+      "category",
+    );
+    return res.status(200).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
+
 async function create(req, res) {
-  return res.sendStatus(200);
+  const { type, description, amount, category } = req.body;
+  try {
+    const result = await BudgetItem.create({
+      type,
+      description,
+      amount,
+      category,
+    });
+    return res.status(201).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
+
 async function update(req, res) {
-  return res.sendStatus(200);
+  const { type, description, amount, category } = req.body;
+  try {
+    const result = await BudgetItem.updateOne(
+      { _id: req.params.id },
+      { type, description, amount, category },
+    );
+    return res.status(200).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
+
 async function remove(req, res) {
-  return res.sendStatus(200);
+  try {
+    const result = await BudgetItem.deleteOne({ _id: req.params.id });
+    return res.status(200).json(result);
+  } catch (error) {
+    console.log(error);
+    return res.status(500);
+  }
 }
 
 module.exports = { getAll, getOne, create, update, remove };
